# hw-sar

./: README.md  hw-sar.cabal  hw-tar.cabal
.circleci/: config.yml
src/HaskellWorks/Codec/: Sar.hs
src/HaskellWorks/Codec/Sar/Internal/: Entry.hs  Get.hs  IO.hs  Pack.hs  RawEntry.hs
src/HaskellWorks/Codec/Sar/Internal/ByteString/: Lazy.hs
test/HaskellWorks/Codec/Sar/: Gen.hs  IO.hs  SarSpec.hs  TarSpec.hs
test/HaskellWorks/Tar/: IO.hs  TarSpec.hs
