cabal-version: 2.4

name:                   hw-sar
version:                0.0.0.1
synopsis:               Library for creating and extracting tar archives
description:            Library for creating and extracting tar archives.
homepage:               https://github.com/haskell-works/hw-sar
license:                BSD-3-Clause
license-file:           LICENSE
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2016 - 2019 John Ky
category:               Codec
tested-with:            GHC == 8.10.1, GHC == 8.8.3, GHC == 8.6.5, GHC == 8.4.4
extra-source-files:     CHANGELOG.md

common base                 { build-depends: base                 >= 4.7        && < 5      }

common binary               { build-depends: binary               >= 0.8.6.0    && < 0.9    }
common bytestring           { build-depends: bytestring           >= 0.10.8.2   && < 0.11   }
common directory            { build-depends: directory            >= 1.3.3.2    && < 1.4    }
common filepath             { build-depends: filepath             >= 1.4.2.1    && < 1.5    }
common hedgehog             { build-depends: hedgehog             >= 0.5        && < 0.7    }
common hspec                { build-depends: hspec                >= 2.4        && < 3      }
common hw-hedgehog          { build-depends: hw-hedgehog          >= 0.1.0.3    && < 0.2    }
common hw-hspec-hedgehog    { build-depends: hw-hspec-hedgehog    >= 0.1.0.4    && < 0.2    }
common process              { build-depends: process              >= 1.6.5.0    && < 1.7    }
common text                 { build-depends: text                 >= 1.2.3.1    && < 1.3    }

common config
  default-language:       Haskell2010

library
  import:   base, config
          , binary
          , bytestring
          , directory
          , filepath
          , text
  exposed-modules:        HaskellWorks.Codec.Sar
                          HaskellWorks.Codec.Sar.Internal.ByteString.Lazy
                          HaskellWorks.Codec.Sar.Internal.Entry
                          HaskellWorks.Codec.Sar.Internal.Get
                          HaskellWorks.Codec.Sar.Internal.IO
                          HaskellWorks.Codec.Sar.Internal.Pack
                          HaskellWorks.Codec.Sar.Internal.RawEntry
  -- other-modules:
  -- other-extensions:
  hs-source-dirs:         src
  default-language:       Haskell2010

executable hw-sar
  import:   base, config
  main-is:                Main.hs
  build-depends:          hw-sar
  -- other-modules:
  -- other-extensions:
  hs-source-dirs:         app
  default-language:       Haskell2010

test-suite hw-sar-test
  import:   base, config
          , bytestring
          , directory
          , hedgehog
          , hspec
          , hw-hedgehog
          , hw-hspec-hedgehog
          , process
  type:                   exitcode-stdio-1.0
  main-is:                Spec.hs
  build-depends:          hw-sar
  hs-source-dirs:         test
  ghc-options:            -threaded -rtsopts -with-rtsopts=-N
  build-tools:            hspec-discover
  other-modules:          HaskellWorks.Codec.Sar.Gen
                          HaskellWorks.Codec.Sar.IO
                          HaskellWorks.Codec.Sar.SarSpec
